# Python

./: README.md
01_python_basics/01_introduction/: 01_hello_world.py  02_python_setup.py  03_python_philosophy.py
01_python_basics/02_variables_and_types/: 01_variables.py  02_numeric_types.py  03_string_methods.py  04_type_conversion.py
01_python_basics/03_basic_operations/: 01_arithmetic.py  02_comparison_and_logic.py
01_python_basics/04_input_output/: 01_user_input.py  02_advanced_formatting.py  03_file_handling.py
02_control_flow/01_conditionals/: 01_if_statements.py  02_nested_conditionals.py  03_match_case.py
02_control_flow/02_loops/: 01_for_loops.py  02_while_loops.py  03_advanced_loops.py  04_comprehensions.py
02_control_flow/03_control_statements/: 01_break_continue_pass.py  02_exception_handling.py
03_data_structures/01_lists/: 01_list_basics.py  02_list_methods.py  03_list_patterns.py  04_advanced_lists.py
03_data_structures/02_tuples/: 01_tuple_basics.py  02_advanced_tuples.py
03_data_structures/03_dictionaries/: 01_dictionary_basics.py  02_advanced_dictionaries.py  03_specialized_dictionaries.py
03_data_structures/04_sets/: 01_set_basics.py  02_set_performance.py
04_functions/01_basics/: 01_function_basics.py
04_functions/02_parameters/: 01_parameter_types.py
04_functions/03_return_values/: 01_return_patterns.py
04_functions/04_lambda_functions/: 01_lambda_basics.py
04_functions/06_closures/: 01_closure_basics.py  02_advanced_closures.py
05_object_oriented/01_basics/: 01_classes_objects.py  02_method_types.py  03_magic_methods.py
05_object_oriented/02_inheritance/: 01_inheritance_basics.py
06_modules_packages/: README.md
06_modules_packages/05_package_distribution/: README.md  pyproject.toml  setup.py
06_modules_packages/05_package_distribution/geometry_package/: cli.py
07_file_handling/: README.md
(+81 files in other folders)
