[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "geometry-utils"
version = "1.0.0"
description = "a package for geometric calculations and shape manipulations"
authors = ["your name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/yourusername/geometry-utils"
repository = "https://github.com/yourusername/geometry-utils"
documentation = "https://geometry-utils.readthedocs.io"
keywords = ["geometry", "mathematics", "shapes", "calculations"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.21.0"
matplotlib = "^3.4.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^2.12.1"
black = "^21.7b0"
mypy = "^0.910"
sphinx = "^4.1.2"
sphinx-rtd-theme = "^0.5.2"

[tool.poetry.scripts]
geometry = "geometry_package.cli:main"

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=geometry_package"
testpaths = [
    "tests",
]

[tool.coverage.run]
source = ["geometry_package"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]
ignore_errors = true
omit = [
    "tests/*",
    "setup.py",
] 